--- a/.github/workflows/makepdf.yml
+++ b/.github/workflows/makepdf.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Generate PDF labels from LaTeX files
 
 # Controls when the workflow will run
 on:
@@ -15,18 +15,12 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      
-      - name: Run a one-line script
-        run: echo Hello, world!
 
       - name: install dependencies
         run: |
@@ -39,6 +33,6 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dist-without-markdown
+          name: pdf-output
           path: "*.pdf"
 
