--- a/.github/workflows/makepdf.yml
+++ b/.github/workflows/makepdf.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Commit pdf
         run: |
+          git config --global --add safe.directory /__w/solatex_labels/solatex_labels
+          git config --global --add safe.directory $PWD
           git config --global user.name 'Automated Workflow'
           git config --global user.email 'devnull@users.noreply.github.com'
           git add output/*.pdf
